--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "typescript": "^4.9.5",
     "url-join": "^5.0.0",
     "web-vitals": "^2.1.4",
+    "yarn": "^1.22.21",
     "yup": "^1.3.2"
   },
   "scripts": {
